--- a/index.html
+++ b/index.html
@@ -954,7 +954,9 @@
         <source src="levelup-sound.mp3" type="audio/mpeg">
     </audio>
 
-    <audio id="welcome-sound" src="welcome-sound.mp3" preload="auto"></audio>
+    <audio id="welcome-sound" preload="auto">
+    <source src="welcome-sound.mp3" type="audio/mpeg">
+    </audio>
 
     <audio id="points-sound" preload="auto">
         <source src="points-sound.mp3" type="audio/mpeg">
