--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Leveling System - Habit Tracker</title>
+    <title>Solo Leveling System </title>
     <link rel="icon" href="solo_leveling_icon.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Roboto:wght@300;400;700&display=swap">
     <style>
@@ -758,12 +758,12 @@
     <div class="container">
         <header>
             <h1>Solo Leveling System</h1>
-            <p>Level up your habits like Sung Jin-Woo</p>
+            <p>Level up your levels</p>
         </header>
         
         <div class="notification">
             <p>NOTIFICATION</p>
-            <p>You have acquired the qualifications for self-improvement.</p>
+            <p>You have acquired the qualifications of a player.</p>
         </div>
         
         <div class="system-tabs">
