--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
     </div>
     
     <div class="notification-popup" id="habit-complete-notification">
-        <div class="notification-text">DAILY GOAL COMPLETE!</div>
+        <div class="notification-text">QUEST COMPLETE!</div>
     </div>
     
     <div class="modal" id="item-use-modal">
